# BTerminal

./: CMakeLists.txt
packaging/: PKGBUILD
resources/: bterminal.css  bterminal.desktop
src/: colors.cpp  colors.h  config.cpp  config.h  config_gui.cpp  config_gui.h  keybindings.cpp  keybindings.h  main.cpp  terminal.cpp  terminal.h  window.cpp  window.h
